# black_hole

./: .gitignore  2D_lensing.cpp  CMakeLists.txt  CPU-geodesic.cpp  black_hole.cpp  geodesic.comp  hdr_tonemap.frag
